# sallm

./: .gitignore  .grype-ignore.yml  .grype.yaml  .pre-commit-config.yaml  .yamlfmt  .yamllint  .yamllint.yml  AGENTS.md  EVAL_INVESTIGATION.md  Makefile  README.md  environment.yml  pyproject.toml  repomix-output.md  req.txt  requirements.txt
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml  claude.yml  linter-checks.yml
conf/finetune/: llama_news_ft.yaml
conf/pipelines/: llama_news_pipeline.yaml
configs/base/: llama_125m.yaml  mamba_125m.yaml  todo
configs/datasets/: sallm_dataset.yaml
configs/eval/tasks/: afrisenti.yaml  masakhanews.yaml
configs/finetune/: llama_news_ft.yaml  mamba_news_ft.yaml
configs/sweeps/: llama_125m_bayesian.yaml  mamba_125m_bayesian.yaml
configs/templates/masakhane_news_classification/: v1.yaml  v2.yaml
configs/tokenizers/: bpe.yaml
data/: prepare_datasets.py
data/cleaning/: README.md  clean_mzansi_text.py  config.toml.example
dataset/: check_language.py  count_tokens.py  csv_to_binary.py  dataset_to_binary.sh  download_dataset.py  downsampling.txt  filtered_data_to_binary.py  filtered_data_to_binary_balanced.py  filtered_data_to_binary_per_language.py  output.txt  preprocess_dataset.ipynb  split_filtered_data.py
docs/: configuration.md  hpo_mamba_sweeps_last_14_days.md  masakhaner-x-issue.md  quickstart.md  recipes.md  slurm.md
ops/slurm/: launch_evaluation.sh  launch_finetune.sh  launch_hpo.sh  resume_hpo.sh
ops/slurm/lib/: auth.sh
recipes/: registry.yaml
reports/: llama_ner_pos_results_2026-04-16.csv  model_results.csv  model_results.md
scripts/: collect_model_results.py  fix_pos_eval_results.py  generate_xlstm_configs.py  get_wandb_sweep_info.py  hpo_score_rerank.py  hpo_select_topk.py  hpo_submit_rerank.sh  launch_all_xlstm_finetunes.sh  launch_evaluation.sh  launch_finetune.sh  launch_hpo.sh  launch_pipeline.sh  launch_resilient_hpo.sh  launch_xlstm_baseline_eval.sh  pretokenize_dataset.py  push_raw_to_hub.sh  push_tokenized_to_hub.sh  resume_crashed_trials.py  resume_hpo.sh  resume_mamba.sh  run_hpo_trial.py  run_sweep_agent.sh  setup_env.sh  submit_eval_only_from_topk.sh  submit_finetune_eval.sh  submit_llama_final_evals.sh  submit_llama_final_finetunes.sh  submit_llama_finetune_eval.sh  templates.txt  train_final.sh  train_final_mamba.sh  train_final_model.sh  train_final_recurrent_gemma.sh  train_final_rwkv.sh  train_final_xlstm.sh  train_resumed_trial.sh
scripts/lib/: auth.sh  cluster_env.sh  env.sh
src/conf/: config.yaml
src/conf/architectures/: llama.yaml  mamba.yaml
src/conf/base/: llama_125m.yaml  llama_400m.yaml  mamba_125m.yaml  recurrent_gemma_125m.yaml  rwkv_125m.yaml  xlstm_125m.yaml
src/conf/dataset/: afriinstruct.yaml  afrisenti.yaml  belebele.yaml  injongointent.yaml  masakhaner.yaml  masakhanews.yaml  masakhapos.yaml  sib.yaml
src/conf/datasets/: sallm_dataset.yaml  sallm_processed.yaml
src/conf/eval/: _defaults.yaml  afri_sa.yaml  afrimgsm.yaml  afrimmlu.yaml  afrisenti.yaml  afrixnli.yaml  belebele.yaml  injongointent.yaml  instruct.yaml  masakhaner.yaml  masakhanews.yaml  masakhapos.yaml  ner.yaml  news.yaml  pos.yaml  run_afri_sa_instruction.yaml  run_afrimgsm_sa.yaml  run_afrimmlu_sa.yaml  run_afrisenti_tso.yaml  run_afrixlni_sa.yaml  run_belebele_afr.yaml  run_belebele_eng.yaml  run_belebele_sot.yaml  run_belebele_ssw.yaml  run_belebele_tsn.yaml  run_belebele_tso.yaml  run_belebele_xho.yaml  run_belebele_zul.yaml  run_llama_afri_sa_instruction_eng.yaml  run_llama_afri_sa_instruction_sot.yaml  run_llama_afri_sa_instruction_xho.yaml  run_llama_afri_sa_instruction_zul.yaml  run_llama_afrihg_all.yaml  run_llama_afrihg_eng.yaml  run_llama_afrihg_xho.yaml  run_llama_afrihg_zul.yaml  run_llama_afrimgsm_sa.yaml  run_llama_afrimmlu_sa.yaml  run_llama_afrixnli_sa.yaml  run_llama_belebele_afr.yaml  (+131 more)
sweeps/: llama_afrihg_xho.yaml  llama_afrihg_xho_wandb_sweep.yaml  llama_afrihg_zul.yaml  llama_belebele_afr.yaml  llama_belebele_eng.yaml  llama_belebele_sot.yaml  llama_belebele_ssw.yaml  llama_belebele_tsn.yaml  llama_belebele_xho.yaml  llama_belebele_zul.yaml  llama_injongointent_eng.yaml  llama_injongointent_sot.yaml  llama_injongointent_xho.yaml  llama_injongointent_zul.yaml  llama_ner_tsn.yaml  llama_ner_xho.yaml  llama_ner_zul.yaml  llama_news_eng.yaml  llama_news_xho.yaml  llama_pos_tsn.yaml  llama_pos_xho.yaml  llama_pos_zul.yaml  llama_sib_afr.yaml  llama_sib_eng.yaml  llama_sib_nso.yaml  llama_sib_sot.yaml  llama_sib_xho.yaml  llama_sib_zul.yaml  llama_t2x_xho.yaml  mamba_afrihg_xho.yaml  mamba_belebele_xho.yaml  mamba_injongointent_xho.yaml  mamba_ner_xho.yaml  mamba_news_xho.yaml  mamba_pos_xho.yaml  mamba_sib_xho.yaml  mamba_t2x_xho.yaml
tests/: test_cli.py  test_config_imports.py  test_dataset_adapters.py  test_lm_eval_integration.py  test_recipes.py  test_task_metrics.py
tokenizer/: analyze_distribution.py  dataset.py  process.py  train.py  train_tokenizer.py  train_tokenizer.sh
tokenizer/tokenizer/: tokenizer.json
transformer_training/: bayesian_optimizer.py  bayesian_optimizer.sh  resume_bayesian_optimizer.py  resume_bayesian_optimizer.sh  train_gpt.py  train_gpt_balanced.py  train_gpt_larger_dataset.py  train_gpt_larger_dataset_per_language.py  train_transformers.py  train_transformers.sh
transformer_training/final/: pretrain.py  run_final_training.sh  run_pretraining.sh  train_transformers.py
transformer_training/fine-tune/: run_evaluation.sh  run_finetuning.sh
(+557 files in other folders)
