[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sallm"
version = "0.1.0"
description = "A modular framework for training small language models for South African languages."
authors = [
  { name="Anri Lombard", email="anri.m.lombard@gmail.com" },
]
license = { file="LICENSE" }
requires-python = ">=3.12"
requires-python = ">=3.12"

dependencies = [
    "torch",
    "transformers",
    "datasets",
    "wandb",
    "pydantic",
    "pyyaml",
    "numpy",
    "scipy",
    "accelerate",
    "regex",
    "tokenizers",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "types-PyYAML",
    "yamllint"
]

[tool.setuptools.packages.find]
where = ["src/main"]
include = ["sallm*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py312']
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
python_version = "3.12"
warn_return_any = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["trash"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# TODO update when/if we add tests
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

