[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sallm"
version = "0.1.0"
description = "A modular framework for training small language models for South African languages."
authors = [{name = "Anri Lombard", email = "anri.m.lombard@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.53.1",
    "protobuf==5.29.5",
    "tornado>=6.5",
    "datasets>=3.6.0",
    "wandb>=0.21.4",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
    "accelerate>=1.7.0",
    "regex>=2024.11.6",
    "tokenizers>=0.21.1",
    "trl>=0.12.0",
    "jinja2>=3.1.6",
    "aiohttp>=3.12.14",
    "urllib3>=2.6.0",
    "fonttools>=4.60.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "peft>=0.14.0",
    "seqeval>=1.2.2",
    "evaluate>=0.4.3",
    "nltk>=3.9.3",
    "sentencepiece>=0.2.0",
    "rouge-score>=0.1.2",
    "lm-eval>=0.4.0",
]

[project.optional-dependencies]
# GPU packages installed separately via pip when needed at build time
gpu = [
    "kernels>=0.11.0",  # pure Python, can be in lockfile
]
dev = [
    "pytest>=8.4.1",
    "types-pyyaml>=6.0.12.20250516",
    "ruff>=0.5.0",
    "pre-commit>=3.8.0",
    "jupyter-core>=5.8.1",
    "yamllint>=1.37.1",
    "types-requests>=2.32.0.20240907",
    "types-tabulate>=0.9.0.20240106",
    "ty>=0.0.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/main/sallm"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tokenizer"]
exclude = ["build", "dist", "trash", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.ty.environment]
python-version = "3.12"
root = ["src/main"]

[tool.ty.src]
include = ["src/main/sallm"]
exclude = ["trash"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.yamllint]
extends = "default"

[tool.yamllint.rules]
line-length = { max = 120, level = "warning" }
indentation = { spaces = 2 }
